# NEAT-Plots

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: changelog.md  contributing.md  generate_gallery.py  index.md  installation.md  quickstart.md
docs/api/: base.md  boroughs_plot.md  manhattan_plot.md
docs/assets/: extra.css
docs/gallery/: index.md
docs/usage/: boroughs.md  customization.md  exwas.md  manhattan.md  memory.md
examples/: README
examples/GWAS/: GWAS_plot_example.py  gwas_plot_example.ipynb  index1.rst  manually_update_annotations.py
examples/TWAS/: TWAS_plot_example.py
gui/: main_window.py  neatenv-full-macos.yml  neatenv-minimal.yml  neatgui.py  neatui_environment_windows.yml  section.py
gui/ui/: main_window.ui
manhattan-plot/: __init__.py  boroughs_plot.py  manhattan_plot.py  qq_plot.py
neat_plots/: __init__.py  _base.py  _constants.py  boroughs_plot.py  manhattan_plot.py
neat_plots.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/base/: index.html
site/api/boroughs_plot/: index.html
site/api/manhattan_plot/: index.html
site/assets/img/: qq_plot.csv
site/changelog/: index.html
site/contributing/: index.html
site/gallery/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/usage/boroughs/: index.html
site/usage/customization/: index.html
site/usage/exwas/: index.html
site/usage/manhattan/: index.html
site/usage/memory/: index.html
tests/: conftest.py  test_boroughs_plot.py  test_data_handling.py  test_manhattan_plot.py  test_qq_plot.py
tests/integration/: generate_fixture.py  test_integration.py
